syntax = "proto3";

package io.stellarproject.iscsi.v1;

import weak "gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "github.com/stellarproject/terraos/api/types/v1/iscsi.proto";

option go_package = "github.com/stellarproject/terraos/api/iscsi/v1;v1";

service Service {
	rpc CreateTarget(CreateTargetRequest) returns (CreateTargetResponse);
	rpc CreateLUN(CreateLUNRequest) returns (CreateLUNResponse);
	rpc AttachLUN(AttachLUNRequest) returns (AttachLUNResponse);
	rpc ListTargets(google.protobuf.Empty) returns (ListTargetsResponse);
	rpc DeleteTarget(DeleteTargetRequest) returns (google.protobuf.Empty);
	rpc DeleteLUN(DeleteLUNRequest) returns (google.protobuf.Empty);
}

message CreateTargetRequest {
	string iqn = 1;
}

message CreateTargetResponse {
	types.v1.Target target = 1;
}

message CreateLUNRequest {
	string id = 1 [(gogoproto.customname) = "ID"];
	int64 fs_size = 2;
}

message CreateLUNResponse {
	types.v1.LUN lun = 1;
}

message AttachLUNRequest {
	string target_iqn = 1;
	types.v1.LUN lun = 2;
}

message AttachLUNResponse {
	types.v1.Target target = 1;
}

message ListTargetsResponse {
	repeated types.v1.Target targets = 1;
}

message DeleteTargetRequest {
	string iqn = 1;
}

message DeleteLUNRequest {
	string id = 1 [(gogoproto.customname) = "ID"];
}
